namespace intro_oop;

public interface INameable
{
    string GetName(); // note: no visibility modifier or virtual keyword
}
